# keystone-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  health  keystone_autocomplete  mkdocs.yml  pyproject.toml  response.txt  run.sh
.github/: dependabot.yml  spectral.yml
.github/recipes/: DockerPublish.yml  QA.yml
.github/workflows/: Build.yml  DockerPublish.yml  Publish.yml  PullRequest.yml  QA.yml  Release.yml  Test.yml  UpdateMain.yml  UpdatedMain.yml
conf/: entrypoint.sh  nginx.conf
crc_service_api/: manage.py
crc_service_api/apps/allocations/: admin.py  urls.py
crc_service_api/apps/authorization/: urls.py
crc_service_api/apps/docs/: urls.py  views.py
crc_service_api/apps/health/: urls.py  views.py
crc_service_api/apps/research_products/: urls.py
crc_service_api/apps/scheduler/: celery.py
crc_service_api/apps/slurm/: tasks.py  utils.py
crc_service_api/apps/users/: __init__.py  models.py
crc_service_api/main/: asgi.py  settings.py  urls.py  wsgi.py
crc_service_portal/: manage.py
crc_service_portal/apps/allocations/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
crc_service_portal/apps/docs/: urls.py  views.py
crc_service_portal/apps/health/: urls.py  views.py
crc_service_portal/apps/jwt/: urls.py
crc_service_portal/apps/research_products/: admin.py  models.py  serializers.py  urls.py  views.py
crc_service_portal/apps/scheduler/: __init__.py  admin.py  celery.py
crc_service_portal/apps/slurm/: tasks.py
crc_service_portal/apps/users/: admin.py  models.py
crc_service_portal/main/: asgi.py  settings.py  urls.py  wsgi.py
crc_service_portal/static/theme/: README.md
crc_service_portal/templates/: index.html
crc_service_portal/templates/allocations/: allocations.html  proposals.html  publications.html
crc_service_portal/templates/common/: base.html
docs/: api.md  api.yml  index.md  using.md
docs/api/: api.md  api.yml  authentication.md  filtering.md  getting_started.md  index.html
docs/developer/: common.md
docs/install/: docker.md  python.md  settings.md  slurm.md
docs/settings/: security.md  settings.md
keystone_api/: __init__.py  manage.py
keystone_api/apps/allocations/: admin.py  (+8 more)
keystone_api/main/: asgi.py  settings.py  urls.py  wsgi.py
keystone_api/plugins/: __init__.py  filter.py  slurm.py
keystone_api/tests/: utils.py
keystone_api/upload_files/: home.txt
prom/: prometheus.yml
(+174 files in other folders)
