[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crc-service-portal"
version = "0.0.0"
readme = "README.md"
description = "Self service portal for the Pitt CRC."
authors = ["Pitt Center for Research Computing"]
keywords = ["Pitt", "CRC", "HPC", "django"]

[tool.poetry.scripts]
crc-service-api = "crc_service_api.manage:main"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.5"
django-auth-ldap = "^4.6.0"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"
django-health-check = "^3.17.0"
django-jazzmin = "^2.6.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
psycopg2-binary = "^2.9.7"
python-dotenv = "1.0.0"
redis = "^3.5.3"
uritemplate = "^4.1.1"

whitenoise = "^6.6.0"
gunicorn = "21.2.0"
uvicorn = "0.24.0"
