[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "keystone-api"
version = "0.0.0"
readme = "README.md"
description = "A REST API for managing user resource allocations on HPC systems."
authors = ["Pitt Center for Research Computing"]
keywords = ["Pitt", "CRC", "HPC", "django"]

[tool.poetry.scripts]
keystone-api = "keystone_api.manage:main"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.7"
django-auth-ldap = "4.6.0"
django-celery-beat = "2.5.0"
django-celery-results = "2.5.1"
django-environ = "0.11.2"
django-health-check = "3.17.0"
django-jazzmin = "2.6.0"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.3.0"
gunicorn = "21.2.0"
psycopg2-binary = "2.9.7"
pyyaml = "6.0.1"
redis = "3.5.3"
uritemplate = "4.1.1"
uvicorn = "0.24.0"
whitenoise = "6.6.0"
